--- a/.env
+++ b/.env
@@ -5,5 +5,8 @@ DB_USER='postgres'
 DB_PASSWORD='fridah'
 DB_HOST='localhost'
 MODE='dev' 
-ALLOWED_HOSTS='instagram.herokuapp.com', 
+ALLOWED_HOSTS='.herokuapp.com', 
 DISABLE_COLLECTSTATIC=1
+
+
+
