--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-bootstrap4==2.3.1
 django-crispy-forms==1.10.0
 django-heroku==0.3.1
 djangorestframework==3.12.2
+gunicorn==20.0.4
 importlib-metadata==1.7.0
 Pillow==8.1.0
 psycopg2==2.8.6
